[package]
name = "adrena-abi"
version = "1.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anchor-lang = "0.30.1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464" } #"fe4fcded34a68934a6017a85d43a307cdb86d803" } #"f677742a978ffdf7bc321746b4119394f6654b7c" }
# anchor-client = "0.30.1"
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464" } #"fe4fcded34a68934a6017a85d43a307cdb86d803" } #"f677742a978ffdf7bc321746b4119394f6654b7c" }
# spl-token-2022 = "6.0.0"
bytemuck = "1.19.0"
anyhow = "1.0.91"
solana-program = "2.0.18"
num-traits = "0.2.19"
log = "0.4.22"
borsh = "1.5.1"
solana-net-utils = "=2.1.0"
