[package]
name = "adrena-abi"
version = "1.1.12"
edition = "2021"

[features]
cpi = []
no-entrypoint = []
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.30.1" }
bytemuck = "1.4.0"
anyhow = "1.0.86"
solana-program = "1.18.17"
num-traits = "0.2.19"
log = "0.4.22"
borsh = "0.10.3"
